--- a/src/app/authorization-page/authentification-page/authentification-page.component.html
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.html
@@ -29,7 +29,7 @@
     </div>
 
   </div>
-  <div class="docs">
+  <!-- <div class="docs">
     <div class='links'>
       <a >Условия и соглашения</a>
       <a >Политика конфиденциальности</a>
@@ -38,5 +38,5 @@
     <div class="copyr">
       Copyright {{ year }}, Who can.  All rights reserved — Designed by Thecube.studio
     </div>
-  </div>
+  </div> -->
 </div>
