--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -1,18 +1,30 @@
-<div class="auth-pg" >
+<div class="reset-pass-pg" >
   <div class="nav-menu">
       <app-main-header [pageName]="'authoriz'"></app-main-header>
   </div>
 
-  <form #form="ngForm" [formGroup]="loginForm" (ngSubmit)="ResetPass(form)">
+  <div class="wrapper">
+    <h2>Восстановление пароля</h2>
+    <form #form="ngForm" [formGroup]="resetPass" (ngSubmit)="ResetPass()">
 
       <mat-form-field appearance="legacy">
-          <mat-label>Email</mat-label>
-        <input matInput type="email" name="email"  formControlName="email" required>
+          <mat-label>Введите e-mail</mat-label>
+        <input matInput type="email" name="email" placeholder="E-mail Address"  formControlName="email" required>
 
-        <mat-error *ngIf="resetPass.get('email').hasError('required')">{{ "erorr" }}</mat-error>
+        <mat-error *ngIf="resetPass.get('email').hasError('required')">{{ "Введите email" }}</mat-error>
         <mat-error *ngIf="resetPass.get('email').hasError('email')">{{
-              "not email"
+              "Не корректный email"
             }}</mat-error>
       </mat-form-field>
+      <section  class="submit">
+
+        <button  mat-button  type="submit" mat-raised-button>
+            Сбросить пароль
+        </button>
+
+
+      </section >
   </form>
+  </div>
+  
 </div>
