--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="menu">
     <div class="logo">
-      <a [routerLink]="'' | localize"> <img src="assets/images/logo.svg" alt=""></a>
+      <!-- <a [routerLink]="'' | localize"> <img src="assets/images/logo.svg" alt=""></a> -->
       <a [routerLink]="'' | localize"> Whocan</a>
     </div>
     <nav *ngIf="pageName !== 'authoriz'">
