--- a/src/app/authorization-page/authentification-page/authentification-page.component.scss
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.scss
@@ -55,12 +55,16 @@
     width: 40%;
     z-index: 2;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 
     h2 {
       color: #000000;
       font-size: 36px;
       font-weight: 800;
-      font-family: "Open Sans"
+      font-family: "Open Sans";
     }
 
     &.left {
@@ -132,9 +136,10 @@
     }
 
     .inform {
-      margin-top: 270px;
+      
       text-align: center;
       position: relative;
+      height: 700px;
 
       h2 {
         color: #000000;
@@ -166,6 +171,7 @@
       line-height: 19px;
       outline: none;
       cursor: pointer;
+      font-family: "Open Sans";
 
       span {
         outline: none;
@@ -234,7 +240,9 @@
 
 :host::ng-deep {
   form {
-
+    width: 416px;
+    margin: auto;
+    font-family: "Open Sans";
     .mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent .mat-ripple-element,
     .mat-checkbox-checked.mat-accent .mat-checkbox-background {
       background: #3C7EEA
@@ -244,8 +252,7 @@
     flex-direction: column;
 
     .mat-form-field {
-      height: 95px;
-
+      width: 100%;
       // position: relative;
     }
 
@@ -268,7 +275,7 @@
         margin-top: 5px;
         background: #FFFFFF;
         background: #FFFFFF;
-        box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.25);
+        
         border-radius: 0px 0px 8px 8px;
         display: flex;
         flex-direction: row;
@@ -277,12 +284,13 @@
         position: relative;
         z-index: 3;
         padding: 2px 0 9px;
-        
+
 
         span {
           width: 19%;
           border-radius: 2px;
           height: 5px;
+
           // margin-bottom: 8px;
           &.unvalidated {
             background: rgba(100, 154, 243, 0.4);
@@ -295,25 +303,32 @@
         }
       }
 
-      .description {
+     .description {
         width: 100%;
         order: 3;
         padding-left: 15px;
         margin: 0;
+        position: absolute;
+        top: 20px;
+        box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.25);
+        background: #fff;
+
         li {
           list-style: none;
           margin: 8px 0 0;
-          font-family: Source Sans Pro;
+          font-family: "Open Sans";
           font-style: normal;
           font-weight: 600;
           font-size: 13px;
           line-height: 16px;
           color: #4285F4;
-          padding-left: 15px;
+          padding: 0 15px;
           position: relative;
-          &:last-of-type{
-            margin-bottom: 0;
+
+          &:last-of-type {
+            margin-bottom: 12px;
           }
+
           &:before {
             position: absolute;
             content: '';
@@ -332,19 +347,49 @@
             -moz-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
             -o-transform: translateY(-50%);
-}
+          }
         }
       }
-    }
 
+      &.mat-form-field .mat-form-field-label {
+        padding-left: 0;
+
+
+      }
+
+      .mat-form-field-label-wrapper {
+        line-height: normal;
+
+
+      }
+
+
+    }
+    .ng-valid {
+      &.mat-form-field .mat-form-field-label {
+          padding-left: 0;            
+        }
+      .mat-form-field-label-wrapper {
+          line-height: normal;
+        }
+  }
+  .controls, .policy {
+    label {
+      padding: 0;
+    }
+  }
     label {
       line-height: 44px;
       padding: 0 10px;
+      font-family: "Open Sans";
+      color: #99ACB7;
     }
 
     input {
       padding: 0 10px;
       box-sizing: border-box;
+      font-family: "Open Sans";
+      color: #707683;
     }
 
     .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
@@ -366,7 +411,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
+
     span {
       font-family: "Open Sans";
       font-weight: 400;
@@ -375,6 +420,7 @@
       color: #707683;
       margin-bottom: 30px;
       position: relative;
+
       &:before {
         position: absolute;
         content: '';
@@ -383,12 +429,13 @@
         background: #707683;
         left: -92px;
         top: 52%;
-        transform:   translateY(-50%)  ;
-        -webkit-transform:   translateY(-50%)  ;
-        -moz-transform:   translateY(-50%)  ;
-        -ms-transform:   translateY(-50%)  ;
-        -o-transform:   translateY(-50%)  ;
-  }
+        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+      }
+
       &:after {
         position: absolute;
         content: '';
@@ -396,18 +443,19 @@
         height: 1px;
         background: #707683;
         top: 52%;
-        transform:   translateY(-50%)  ;
-        -webkit-transform:   translateY(-50%)  ;
-        -moz-transform:   translateY(-50%)  ;
-        -ms-transform:   translateY(-50%)  ;
-        -o-transform:   translateY(-50%)  ;
+        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
         right: -92px;
       }
     }
-  
+
     .social {
       display: flex;
       justify-content: center;
+
       button {
         width: 24px;
         height: 24px;
@@ -419,19 +467,54 @@
         background-size: contain;
         background-position: center;
         cursor: pointer;
+
         &.gl {
           background-image: url(/assets/images/icons/google.png);
-        
+
         }
+
         &.fb {
           background-image: url(/assets/images/icons/icon.png);
         }
+
         &.lin {
           background-image: url(/assets/images/icons/linkedin.png);
         }
       }
     }
   }
+
+  &::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: #99ACB7;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+&::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #99ACB7;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+&:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #99ACB7;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+&:-moz-placeholder {
+    /* Firefox 18- */
+    color: #99ACB7;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+}
 }
 
 // move global navigation-block
