--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <h2>Регистрация</h2>
       <p class="text">Добро пожаловать на лучшую платформу фриланса Whocan!</p>
-      <form #form="ngForm" [formGroup]="registrationForm" (ngSubmit)="registrate(form)">
+      <form #form="ngForm" [formGroup]="registrationForm" (ngSubmit)="registrate()">
         <mat-form-field>
             <mat-label>Email</mat-label>
           <input matInput type="email"formControlName="email" required />
@@ -14,23 +14,23 @@
         </mat-form-field>
         <mat-form-field>
             <mat-label>Введите пароль</mat-label>
-            <input matInput type="password" formControlName="password" required />
+            <input matInput type="password" [type]="hideF ? 'password' : 'text'" formControlName="password" required />
             <div class="pass-erorrs">
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasCapitalCase') ? 'unvalidated': 'validated'"></span>
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSmallCase') ? 'unvalidated': 'validated'"></span>
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasSpecialCharacters') ? 'unvalidated': 'validated'"></span>
               <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
-              <ul class="description" *ngIf="!registrationForm.controls['password'].unvalidated">
+              <ul class="description" *ngIf="registrationForm.controls['password'].invalid">
                 
                 <li *ngIf="registrationForm.controls['password'].hasError('hasNumber')">Должна быть минимум одна цифра</li>
-                <li *ngIf="registrationForm.controls['password'].hasError('hasSmallCase')">Должна быть минимум онда маленькая буква</li>
-                <li *ngIf="registrationForm.controls['password'].hasError('hasCapitalCase')">Должна быть минимум онда большая буква</li>
+                <li *ngIf="registrationForm.controls['password'].hasError('hasSmallCase')">Должна быть минимум одна маленькая буква a-z</li>
+                <li *ngIf="registrationForm.controls['password'].hasError('hasCapitalCase')">Должна быть минимум одна большая буква A-Z</li>
                 <li *ngIf="registrationForm.controls['password'].hasError('hasSpecialCharacters')">Должна быть минимум один спец символ</li>
                 <li *ngIf="registrationForm.controls['password'].hasError('minLengthCharacters')">Пароль не меньше 8 символов</li>
               </ul>  
             </div>
-            <button class="pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+            <button class="pass" mat-icon-button matSuffix (click)="hideF = !hideF" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hideF" [style.color]="hideF ? '#DBDBDB': '#000'">
             <mat-icon>{{hideF ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
@@ -40,8 +40,8 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>Повторно введите пароль</mat-label>
-            <input matInput type="password" formControlName="password_confirmation" required />
-            <button class="pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+            <input matInput type="password" [type]="hideS ? 'password' : 'text'" formControlName="password_confirmation" required />
+            <button class="pass" mat-icon-button matSuffix (click)="hideS = !hideS" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hideS" [style.color]="hideS ? '#DBDBDB': '#000'">
             <mat-icon>{{hideS ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
@@ -51,11 +51,11 @@
             }}</mat-error>
         </mat-form-field>
         <section>
-            <mat-checkbox required  class="policy" formControlName="agreed">Я согласен(а) с <span>Политикой конфиденциальности</span></mat-checkbox>
+            <mat-checkbox class="controls" required  class="policy" formControlName="agreed">Я согласен(а) с <span>Политикой конфиденциальности</span></mat-checkbox>
         </section>
         <section  class="submit">
             <button  mat-button  type="submit" mat-raised-button>
-                Войти
+                Зарегистрироваться
             </button>
         </section >
       </form>
