--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
@@ -7,13 +7,16 @@ h2 {
   font-size: 36px;
   font-weight: 900;
   text-align: center;
+  font-family: "Open Sans";
 }
 
 p {
   color: #585858;
   font-size: 21px;
+  line-height: 32px;
   font-weight: 300;
   text-align: center;
+  font-family: "Open Sans";
 }
 
 .form-control:focus {
@@ -28,38 +31,39 @@ input {
   background-color: #f5f6fa;
   border: none;
   outline: none;
+  font-family: "Open Sans";
 
-  // &::-webkit-input-placeholder {
-  //     /* Chrome/Opera/Safari */
-  //     color: #7a7a7a;
-  //     font-size: 16px;
-  //     font-weight: 400;
-  //     line-height: 20px;
-  // }
+  &::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
+      color: #99ACB7;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+  }
 
-  // &::-moz-placeholder {
-  //     /* Firefox 19+ */
-  //     color: #7a7a7a;
-  //     font-size: 16px;
-  //     font-weight: 400;
-  //     line-height: 20px;
-  // }
+  &::-moz-placeholder {
+      /* Firefox 19+ */
+      color: #99ACB7;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+  }
 
-  // &:-ms-input-placeholder {
-  //     /* IE 10+ */
-  //     color: #7a7a7a;
-  //     font-size: 16px;
-  //     font-weight: 400;
-  //     line-height: 20px;
-  // }
+  &:-ms-input-placeholder {
+      /* IE 10+ */
+      color: #99ACB7;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+  }
 
-  // &:-moz-placeholder {
-  //     /* Firefox 18- */
-  //     color: #7a7a7a;
-  //     font-size: 16px;
-  //     font-weight: 400;
-  //     line-height: 20px;
-  // }
+  &:-moz-placeholder {
+      /* Firefox 18- */
+      color: #99ACB7;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+  }
 }
 
 .policy {
@@ -67,7 +71,7 @@ input {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: #707683;
+  color: #99ACB7;
 
   span {
     text-decoration-line: underline;
@@ -82,6 +86,7 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: "Open Sans";
 
   span {
     font-family: "Open Sans";
@@ -129,7 +134,8 @@ input {
 
 .submit {
   text-align: center;
-
+  font-family: "Open Sans";
+  margin-top: 24px;
   button {
     padding: 13px 73px;
     color: #ffffff;
@@ -138,6 +144,7 @@ input {
     background: #3C7EEA;
     box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
     border-radius: 8px;
+    font-family: "Open Sans";
   }
 
 }
