--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -26,5 +26,6 @@
       </section >
   </form>
   </div>
-  
+
 </div>
+<app-inform-popup *ngIf="message" [(message)] ="message"></app-inform-popup>
