--- a/src/app/catalog-page/catalog-page.component.html
+++ b/src/app/catalog-page/catalog-page.component.html
@@ -12,7 +12,7 @@
 
 
 
-<!-- <div class="cards-list" *ngIf="freelancerList">
+<div class="cards-list" *ngIf="freelancerList">
   <div class="card" *ngFor="let freelancer of freelancerList.gigs">
     <div class="card-preview__bg">
       <img class="card-preview" src="/assets/images/preview.png">
@@ -45,4 +45,4 @@
     </div>
 
   </div>
-</div> -->
+</div>
