--- a/src/app/catalog-page/categorys-filter/categorys-filter.component.html
+++ b/src/app/catalog-page/categorys-filter/categorys-filter.component.html
@@ -1,3 +1,6 @@
 <div class="filters-list">
-  <div class="filter-item"></div>
+  <div class="filter-item">filters-1</div>
+  <div class="filter-item">filters-2</div>
+  <div class="filter-item">filters-3</div>
+  <div class="filter-item">filters-4</div>
 </div>
