--- a/src/app/catalog-page/categorys-filter/categorys-filter.component.scss
+++ b/src/app/catalog-page/categorys-filter/categorys-filter.component.scss
@@ -9,4 +9,11 @@
   font-size: 16px;
   line-height: 21px;
   padding: 15px 19px;
+  margin-right: 40px;
+
+
+  background: #FFFFFF;
+  border: 1px solid rgba(220, 224, 230, 0.1);
+  box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
+  border-radius: 3px;
 }
