--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
@@ -19,7 +19,7 @@
   justify-content: center;
 
   h2 {
-    font-family: "Open Sans";
+    font-family: "Source Sans Pro";
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
@@ -32,7 +32,7 @@
 form {
   display: flex;
   flex-direction: row;
-  font-family: "Open Sans";
+  font-family: "Source Sans Pro";
   align-items: center;
 
   ::ng-deep {
@@ -65,19 +65,19 @@ form {
     .mat-focused {
       &.mat-form-field .mat-form-field-label {
         padding-left: 0;
-        
-        
+
+
       }
       .mat-form-field-label-wrapper {
         line-height: normal;
-  
-  
+
+
       }
-  
+
     }
     .ng-valid {
         &.mat-form-field .mat-form-field-label {
-            padding-left: 0;            
+            padding-left: 0;
           }
         .mat-form-field-label-wrapper {
             line-height: normal;
