--- a/src/app/authorization-page/authentification-page/authentification-page.component.scss
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.scss
@@ -63,7 +63,7 @@
       color: #000000;
       font-size: 36px;
       font-weight: 800;
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
     }
 
     &.left {
@@ -143,7 +143,7 @@
         color: #000000;
         font-size: 36px;
         font-weight: 800;
-        font-family: "Open Sans";
+        font-family: "Source Sans Pro";
       }
 
       p {
@@ -153,7 +153,7 @@
         font-weight: 300;
         line-height: 32px;
         margin: 25px auto 60px;
-        font-family: "Open Sans";
+        font-family: "Source Sans Pro";
       }
     }
 
@@ -169,7 +169,7 @@
       line-height: 19px;
       outline: none;
       cursor: pointer;
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
 
       span {
         outline: none;
@@ -209,7 +209,7 @@
     margin-bottom: 7px;
 
     a {
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
       font-weight: 400;
       font-size: 14px;
       line-height: 18px;
@@ -224,7 +224,7 @@
   }
 
   .copyr {
-    font-family: "Open Sans";
+    font-family: "Source Sans Pro";
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
@@ -240,7 +240,7 @@
   form {
     width: 416px;
     margin: auto;
-    font-family: "Open Sans";
+    font-family: "Source Sans Pro";
     .mat-checkbox-checked:not(.mat-checkbox-disabled).mat-accent
       .mat-ripple-element,
     .mat-checkbox-checked.mat-accent .mat-checkbox-background {
@@ -265,6 +265,7 @@
     }
 
     .pass-erorrs {
+      // z-index: -20;
       display: none;
     }
 
@@ -310,7 +311,7 @@
         li {
           list-style: none;
           margin: 8px 0 0;
-          font-family: "Open Sans";
+          font-family: "Source Sans Pro";
           font-style: normal;
           font-weight: 600;
           font-size: 13px;
@@ -344,9 +345,7 @@
           }
         }
       }
-      &.mat-form-field-invalid .mat-form-field-label {
-        padding-left: 0;
-      }
+
       &.mat-form-field .mat-form-field-label {
         padding-left: 0;
       }
@@ -354,6 +353,9 @@
       .mat-form-field-label-wrapper {
         line-height: normal;
       }
+    }
+    .mat-form-field-invalid .mat-form-field-label {
+      padding-left: 0;
     }
     .ng-valid {
       &.mat-form-field .mat-form-field-label {
@@ -372,14 +374,14 @@
     label {
       line-height: 44px;
       padding: 0 10px;
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
       color: #99acb7;
     }
 
     input {
       padding: 0 14px;
       box-sizing: border-box;
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
       color: #707683;
     }
 
@@ -403,9 +405,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    opacity: 0;
     span {
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
       font-weight: 400;
       font-size: 14px;
       line-height: 18px;
