--- a/src/app/authorization-page/authentification-page/login-page/login-page.component.html
+++ b/src/app/authorization-page/authentification-page/login-page/login-page.component.html
@@ -6,7 +6,7 @@
         <p class="text">Рады видеть вас снова</p>
         <form #form="ngForm" [formGroup]="loginForm" (ngSubmit)="authenticate()">
 
-          <mat-form-field appearance="legacy">
+          <mat-form-field >
               <mat-label>Email</mat-label>
             <input matInput type="email" name="email"  formControlName="email" required>
 
