--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
@@ -1,13 +1,13 @@
-.registration-bl {
-  // margin-top: 260px;
-}
+// .registration-bl {
+//   // margin-top: 260px;
+// }
 
 h2 {
   color: #000000;
   font-size: 36px;
   font-weight: 900;
   text-align: center;
-  font-family: "Open Sans";
+  font-family: "Source Sans Pro";
 }
 
 p {
@@ -16,7 +16,7 @@ p {
   line-height: 32px;
   font-weight: 300;
   text-align: center;
-  font-family: "Open Sans";
+  font-family: "Source Sans Pro";
 }
 
 .form-control:focus {
@@ -31,7 +31,7 @@ input {
   background-color: #f5f6fa;
   border: none;
   outline: none;
-  font-family: "Open Sans";
+  font-family: "Source Sans Pro";
 
   &::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
@@ -67,7 +67,7 @@ input {
 }
 
 .policy {
-  font-family: "Open Sans";
+  font-family: "Source Sans Pro";
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -75,7 +75,7 @@ input {
 
   span {
     text-decoration-line: underline;
-    
+
   }
 }
 
@@ -86,10 +86,10 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Open Sans";
+  font-family: "Source Sans Pro";
 
   span {
-    font-family: "Open Sans";
+    font-family: "Source Sans Pro";
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
@@ -134,7 +134,7 @@ input {
 
 .submit {
   text-align: center;
-  font-family: "Open Sans";
+  font-family: "Source Sans Pro";
   margin-top: 24px;
   button {
     padding: 13px 73px;
@@ -144,7 +144,7 @@ input {
     background: #3C7EEA;
     box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
     border-radius: 8px;
-    font-family: "Open Sans";
+    font-family: "Source Sans Pro";
   }
 
 }
