--- a/src/app/authorization-page/set-new-pass/set-new-pass.component.scss
+++ b/src/app/authorization-page/set-new-pass/set-new-pass.component.scss
@@ -40,24 +40,16 @@
     }
 
     .pass-erorrs {
+      // z-index: -20;
       display: none;
-    }
-    .ng-valid {
-        &.mat-form-field .mat-form-field-label {
-            padding-left: 0;            
-          }
-        .mat-form-field-label-wrapper {
-            line-height: normal;
-          }
     }
 
     .mat-focused {
       .pass-erorrs {
         width: 100%;
         margin-top: 5px;
-        background: #FFFFFF;
-        background: #FFFFFF;
-        box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.25);
+        background: #ffffff;
+        background: #ffffff;
         border-radius: 0px 0px 8px 8px;
         display: flex;
         flex-direction: row;
@@ -66,21 +58,17 @@
         position: relative;
         z-index: 3;
         padding: 2px 0 9px;
-
-
         span {
           width: 19%;
           border-radius: 2px;
           height: 5px;
-
-          // margin-bottom: 8px;
           &.unvalidated {
             background: rgba(100, 154, 243, 0.4);
             order: 1;
           }
 
           &.validated {
-            background: #649AF3;
+            background: #649af3;
           }
         }
       }
@@ -90,26 +78,30 @@
         order: 3;
         padding-left: 15px;
         margin: 0;
+        position: absolute;
+        top: 20px;
+        box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.25);
+        background: #fff;
 
         li {
           list-style: none;
           margin: 8px 0 0;
-          font-family: Source Sans Pro;
+          font-family: "Source Sans Pro";
           font-style: normal;
           font-weight: 600;
           font-size: 13px;
           line-height: 16px;
-          color: #4285F4;
-          padding-left: 15px;
+          color: #4285f4;
+          padding: 0 15px;
           position: relative;
 
           &:last-of-type {
-            margin-bottom: 0;
+            margin-bottom: 12px;
           }
 
           &:before {
             position: absolute;
-            content: '';
+            content: "";
             left: 0;
             top: 50%;
             transform: translateY(-50%);
@@ -120,7 +112,7 @@
             -moz-border-radius: 50%;
             -ms-border-radius: 50%;
             -o-border-radius: 50%;
-            background: #4285F4;
+            background: #4285f4;
             -webkit-transform: translateY(-50%);
             -moz-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
@@ -131,30 +123,45 @@
 
       &.mat-form-field .mat-form-field-label {
         padding-left: 0;
-
-
       }
 
       .mat-form-field-label-wrapper {
         line-height: normal;
-
-
       }
-
-
     }
-
+    .mat-form-field-invalid .mat-form-field-label {
+      padding-left: 0;
+    }
+    .ng-valid {
+      &.mat-form-field .mat-form-field-label {
+        padding-left: 0;
+      }
+      .mat-form-field-label-wrapper {
+        line-height: normal;
+      }
+    }
+    .controls,
+    .policy {
+      label {
+        padding: 0;
+      }
+    }
     label {
       line-height: 44px;
       padding: 0 10px;
+      font-family: "Source Sans Pro";
+      color: #99acb7;
     }
 
     input {
-      padding: 0 10px;
+      padding: 0 14px;
       box-sizing: border-box;
+      font-family: "Source Sans Pro";
+      color: #707683;
     }
 
-    .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+    .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float
+      .mat-form-field-label {
       line-height: normal;
     }
 
@@ -165,7 +172,8 @@
       font-size: 25px;
     }
   }
-}
+  }
+
 
 
 
@@ -235,6 +243,7 @@ input {
   text-align: center;
 
   button {
+    margin-top: 54px;
     padding: 13px 73px;
     color: #ffffff;
     font-size: 16px;
