--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -128,6 +128,8 @@
       width: 8px;
       height: 8px;
       border: 1px solid #FFFFFF;
+      right: -5px;
+      top: -5px;
     }
   }
 }
@@ -150,5 +152,6 @@
   }
   .notifications {
     margin-right: 30px;
+
   }
 }
