--- a/src/app/shared/modules/inform-popup/inform-popup.component.scss
+++ b/src/app/shared/modules/inform-popup/inform-popup.component.scss
@@ -17,7 +17,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  font-family: Open Sans;
+  font-family: "Source Sans Pro";
   background: #FFFFFF;
   border-radius: 4px;
   .close {
