--- a/src/app/authorization-page/authentification-page/authentification-page.component.scss
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.scss
@@ -11,6 +11,7 @@
   height: 100%;
   width: 100%;
   top: 0;
+  background: #fff;
 
   &.login {
     .login-form {
@@ -18,10 +19,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      background: #fff;
     }
 
     .registr-form {
       display: none;
+      // background: #fff;
     }
   }
 
@@ -36,10 +39,12 @@
     .registr-form {
       width: 60%;
       display: flex;
+      background: #fff;
     }
 
     .login-form {
       display: none;
+      background: #fff;
     }
   }
 
@@ -50,7 +55,7 @@
 
   .swipe-block {
     height: 100%;
-    background: #f5f6fa;
+    background: #F4F7FC;
     position: absolute;
     width: 40%;
     z-index: 2;
@@ -64,6 +69,7 @@
       font-size: 36px;
       font-weight: 800;
       font-family: "Source Sans Pro";
+      text-align: center;
     }
 
     &.left {
@@ -144,6 +150,7 @@
         font-size: 36px;
         font-weight: 800;
         font-family: "Source Sans Pro";
+        text-align: center;
       }
 
       p {
@@ -263,6 +270,10 @@
     .mat-form-field-invalid .mat-input-element {
       border: 1px solid red;
     }
+    .mat-form-field-appearance-legacy .mat-form-field-subscript-wrapper {
+      margin-top: -3px;
+      padding-left: 10px;
+    }
 
     .pass-erorrs {
       // z-index: -20;
@@ -275,7 +286,7 @@
         margin-top: 5px;
         background: #ffffff;
         background: #ffffff;
-        border-radius: 0px 0px 8px 8px;
+        // border-radius: 0px 0px 8px 8px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -301,16 +312,17 @@
       .description {
         width: 100%;
         order: 3;
-        padding-left: 15px;
+        padding-left: 0;
         margin: 0;
         position: absolute;
-        top: 20px;
+        top: 15px;
         box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.25);
         background: #fff;
+        border-radius: 0px 0px 8px 8px;
 
         li {
           list-style: none;
-          margin: 8px 0 0;
+          margin: 8px 0 0 15px;
           font-family: "Source Sans Pro";
           font-style: normal;
           font-weight: 600;
@@ -346,8 +358,9 @@
         }
       }
 
+
       &.mat-form-field .mat-form-field-label {
-        padding-left: 0;
+        // padding-left: 0;
       }
 
       .mat-form-field-label-wrapper {
@@ -355,11 +368,11 @@
       }
     }
     .mat-form-field-invalid .mat-form-field-label {
-      padding-left: 0;
+      // padding-left: 0;
     }
     .ng-valid {
       &.mat-form-field .mat-form-field-label {
-        padding-left: 0;
+        // padding-left: 0;
       }
       .mat-form-field-label-wrapper {
         line-height: normal;
@@ -368,16 +381,21 @@
     .controls,
     .policy {
       label {
-        padding: 0;
+        // padding: 0;
       }
     }
     label {
-      line-height: 44px;
-      padding: 0 10px;
+      line-height: 40px;
+      padding: 0 14px;
       font-family: "Source Sans Pro";
       color: #99acb7;
+      font-size: 17.5px;
+      font-weight: 400;
     }
-
+ .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float
+      .mat-form-field-label {
+      line-height: normal;
+    }
     input {
       padding: 0 14px;
       box-sizing: border-box;
@@ -385,16 +403,14 @@
       color: #707683;
     }
 
-    .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float
-      .mat-form-field-label {
-      line-height: normal;
-    }
+
 
     .pass.mat-icon-button.mat-button-base {
       position: absolute;
       right: 0;
       top: -37px;
       font-size: 25px;
+      width: 50px;
     }
   }
 
