--- a/src/app/authorization-page/set-new-pass/set-new-pass.component.scss
+++ b/src/app/authorization-page/set-new-pass/set-new-pass.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #fff;
 }
 
 .nav-menu {
@@ -24,11 +25,10 @@
     display: flex;
     flex-direction: column;
 
-    // .mat-form-field {
-    //   height: 95px;
-
-    //   // position: relative;
-    // }
+    .mat-form-field-appearance-legacy .mat-form-field-subscript-wrapper {
+      margin-top: -3px;
+      padding-left: 10px;
+    }
 
     .mat-form-field-underline {
       display: none;
@@ -48,9 +48,8 @@
       .pass-erorrs {
         width: 100%;
         margin-top: 5px;
-        background: #ffffff;
-        background: #ffffff;
-        border-radius: 0px 0px 8px 8px;
+        // background: #ffffff;
+        // background: #ffffff;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -58,6 +57,7 @@
         position: relative;
         z-index: 3;
         padding: 2px 0 9px;
+        // border-radius: 0px 0px 8px 8px;
         span {
           width: 19%;
           border-radius: 2px;
@@ -76,16 +76,17 @@
       .description {
         width: 100%;
         order: 3;
-        padding-left: 15px;
+        padding-left: 0;
         margin: 0;
         position: absolute;
-        top: 20px;
+        top: 15px;
         box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.25);
         background: #fff;
+        border-radius: 0px 0px 8px 8px;
 
         li {
           list-style: none;
-          margin: 8px 0 0;
+          margin: 8px 0 0 15px;
           font-family: "Source Sans Pro";
           font-style: normal;
           font-weight: 600;
@@ -94,7 +95,7 @@
           color: #4285f4;
           padding: 0 15px;
           position: relative;
-
+          // background: #fff;
           &:last-of-type {
             margin-bottom: 12px;
           }
@@ -122,7 +123,7 @@
       }
 
       &.mat-form-field .mat-form-field-label {
-        padding-left: 0;
+        // padding-left: 0;
       }
 
       .mat-form-field-label-wrapper {
@@ -130,11 +131,11 @@
       }
     }
     .mat-form-field-invalid .mat-form-field-label {
-      padding-left: 0;
+      // padding-left: 0;
     }
     .ng-valid {
       &.mat-form-field .mat-form-field-label {
-        padding-left: 0;
+        // padding-left: 0;
       }
       .mat-form-field-label-wrapper {
         line-height: normal;
@@ -143,14 +144,16 @@
     .controls,
     .policy {
       label {
-        padding: 0;
+        // padding: 0;
       }
     }
-    label {
-      line-height: 44px;
-      padding: 0 10px;
+     label {
+      line-height: 40px;
+      padding: 0 14px;
       font-family: "Source Sans Pro";
       color: #99acb7;
+      font-size: 17.5px;
+      font-weight: 400;
     }
 
     input {
