--- a/src/app/catalog-page/items-list/items-list.component.html
+++ b/src/app/catalog-page/items-list/items-list.component.html
@@ -1,4 +1,4 @@
-<div class="cards-list" *ngIf="freelancerList">
+<!-- <div class="cards-list" *ngIf="freelancerList">
   <div class="card" *ngFor="let freelancer of freelancerList.gigs">
     <div class="card-preview__bg">
       <img class="card-preview" src="/assets/images/preview.png">
@@ -31,4 +31,7 @@
     </div>
 
   </div>
-</div>
+</div> -->
+
+
+<!-- subcategoRY -->
