--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -6,7 +6,7 @@
     </div>
     <nav *ngIf="pageName !== 'authoriz'">
       <a [routerLink]="''">{{'header.how_it_works' | translate}}</a>
-      <a [routerLink]="['/catalog', 'design'] | localize">Каталог</a>
+      <a [routerLink]="['/catalog'] | localize">Каталог</a>
       <a [routerLink]="''">Проэкты</a>
     </nav>
   </div>
