--- a/src/app/catalog-page/category-page/category-page.component.html
+++ b/src/app/catalog-page/category-page/category-page.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<!-- <div class="container">
     <app-main-header></app-main-header>
 </div>
 
-<!-- <h2>Hello </h2> -->
+
 
 <div class="category-wrapper">
   <div class="container">
@@ -27,4 +27,7 @@
   <h4>sorting</h4>
   <app-items-list></app-items-list>
 
-</div>
+</div> -->
+
+
+<!-- categoRY and subcategorYES -->
