--- a/src/app/categories-list/subcategorie/subcategorie.component.html
+++ b/src/app/categories-list/subcategorie/subcategorie.component.html
@@ -1,3 +1,37 @@
 <app-main-header></app-main-header>
 <app-categories-header></app-categories-header>
 <p>subcategorie works! </p><h1>УРОВЕНЬ 3</h1>
+<!-- <div class="cards-list" *ngIf="freelancerList">
+  <div class="card" *ngFor="let freelancer of freelancerList">
+    <div class="card-preview__bg">
+      <img class="card-preview" src="/assets/images/preview.png">
+    </div>
+    <div class="card-description">
+
+      <div class="card-description__top">
+        <div class="card-description__ava"><img *ngIf="freelancer.basic.name" src="{{freelancer.user.ava}}" alt="avatar">
+        </div>
+        <div>
+          <div class="card-description__name">{{freelancer.user.name}} {{freelancer.user.surneme}}</div>
+          <div class="card-description__skill">{{freelancer.user.level}}</div>
+        </div>
+      </div>
+
+      <p class="card-description__about">{{freelancer.descroption}}</p>
+
+      <div class="card-description__bottom">
+        <div class="card-description__level">{{freelancer.rating}}</div>
+        <div class="card-description__comments"><a>({{freelancer.comments_count}} отзывов)</a></div>
+      </div>
+
+    </div>
+    <div class="card-bottom">
+      <div class="card-bottom__like" [class.liked]="freelancer.liked"></div>
+      <div class="card-bottom__price">
+        начиная от
+        <span>{{freelancer.min_price}}</span>
+      </div>
+    </div>
+
+  </div>
+</div> -->
