--- a/src/app/authorization-page/authentification-page/authentification-page.component.html
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.html
@@ -1,42 +1,43 @@
 <div class="auth-pg" [ngClass]="auth? 'registr' : 'login'">
-  <div class="nav-menu">
-      <app-main-header [pageName]="'authoriz'"></app-main-header>
-  </div>
-  <div class='login-form auth-form'>
-    <div class="form log">
-      <app-login-page></app-login-page>
+    <div class="nav-menu">
+        <app-main-header [pageName]="'authoriz'"></app-main-header>
     </div>
-  </div>
-  <div class='registr-form auth-form'>
-      <div class="form reg">
-        <app-registration-page></app-registration-page>
+    <div class='login-form auth-form'>
+      <div class="form log">
+        <app-login-page></app-login-page>
       </div>
-  </div>
-  <div class="swipe-block" [ngClass]="auth? 'left' : 'right'">
-    <div class="inform">
-      <h2>
-        <span class='registr-txt'>Впервые на сайте?</span>
-        <span class='login-txt'>Уже заходили</span>
-      </h2>
-      <p>
-        <span class='registr-txt'>Добро пожаловать на Who can!</span>
-        <span class='login-txt'>Будем рады видеть вас снова!</span>
-      </p>
-      <button mat-button class='swap-btn' type="button" (click)="swipeBtn()" [ngClass]="auth? 'login-btn': 'registr-btn'" >
-        <span class='login-btn-txt'>Войти</span>
-        <span class='registr-btn-txt'>Хочу зарегистрироваться</span>
-      </button>
     </div>
+    <div class='registr-form auth-form'>
+        <div class="form reg">
+          <app-registration-page></app-registration-page>
+        </div>
+    </div>
+    <div class="swipe-block" [ngClass]="auth? 'left' : 'right'">
+      <div class="inform">
+        <h2>
+          <span class='registr-txt'>Впервые на сайте?</span>
+          <span class='login-txt'>Уже заходили</span>
+        </h2>
+        <p>
+          <span class='registr-txt'>Добро пожаловать на Who can!</span>
+          <span class='login-txt'>Будем рады видеть вас снова!</span>
+        </p>
+        <button mat-button class='swap-btn' type="button" (click)="swipeBtn()" [ngClass]="auth? 'login-btn': 'registr-btn'" >
+          <span class='login-btn-txt'>Войти</span>
+          <span class='registr-btn-txt'>Хочу зарегистрироваться</span>
+        </button>
+      </div>
 
+    </div>
+    <!-- <div class="docs">
+      <div class='links'>
+        <a >Условия и соглашения</a>
+        <a >Политика конфиденциальности</a>
+        <a >Карта сайта</a>
+      </div>
+      <div class="copyr">
+        Copyright {{ year }}, Who can.  All rights reserved — Designed by Thecube.studio
+      </div>
+    </div> -->
   </div>
-  <!-- <div class="docs">
-    <div class='links'>
-      <a >Условия и соглашения</a>
-      <a >Политика конфиденциальности</a>
-      <a >Карта сайта</a>
-    </div>
-    <div class="copyr">
-      Copyright {{ year }}, Who can.  All rights reserved — Designed by Thecube.studio
-    </div>
-  </div> -->
-</div>
+  <app-inform-popup *ngIf="message" [(message)] ="message"></app-inform-popup>
