--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -2,13 +2,20 @@
   position: relative;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   header {
     background-color: #649af3;
-    padding: 30px 80px 30px 50px;
+    padding: 0 80px 0 50px;
     display: flex;
+    -webkit-box-pack: justify;
     justify-content: space-between;
+    width: 100%;
+    height: 6.5%;
+    align-items: center;
     .logo {
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
       font-weight: 800;
       font-size: 24px;
       line-height: 24px;
@@ -48,7 +55,7 @@
   position: relative;
   label {
     cursor: pointer;
-    font-family: "Open Sans";
+    font-family: "Source Sans Pro";
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -116,7 +123,6 @@
   }
   input ~ input:checked ~ .toggle-outside .toggle-inside {
     left: 16px;
-
   }
 }
 .notifications {
@@ -127,7 +133,7 @@
       color: transparent;
       width: 8px;
       height: 8px;
-      border: 1px solid #FFFFFF;
+      border: 1px solid #ffffff;
       right: -5px;
       top: -5px;
     }
@@ -140,18 +146,64 @@
       border: none;
       background: none;
       margin-left: 80px;
-      font-family: "Open Sans";
+      font-family: "Source Sans Pro";
       font-style: normal;
       font-weight: 600;
       font-size: 16px;
       line-height: 20px;
       text-transform: capitalize;
-      color: #FFFFFF;
+      color: #ffffff;
       cursor: pointer;
     }
   }
   .notifications {
     margin-right: 30px;
-
   }
+}
+.side-bar {
+  width: 20%;
+  height: 93.4%;
+  .avatar {
+    height: 260px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    // position: relative;
+    &:before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      background: #649af3;
+      height: 345px;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+    img {
+      width: 107px;
+      height: 107px;
+      border-radius: 50%;
+      margin-bottom: 8px;
+    }
+  }
+  .name {
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 24px;
+    color: #ffffff;
+    margin: 0;
+  }
+  .menu {
+    // height: 100%;
+  }
+}
+.content-part {
+  width: 77%;
+  height: 93.4%;
+  background: #fbfcfd;
+  box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
+  border-radius: 4px;
 }
