--- a/src/app/authorization-page/authentification-page/authentification-page.component.html
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.html
@@ -19,7 +19,7 @@
           <span class='login-txt'>Уже заходили</span>
         </h2>
         <p>
-          <span class='registr-txt'>Добро пожаловать на Who can!</span>
+          <span class='registr-txt'>Добро пожаловать на лучшую платформу фриланса Who can!</span>
           <span class='login-txt'>Будем рады видеть вас снова!</span>
         </p>
         <button mat-button class='swap-btn' type="button" (click)="swipeBtn()" [ngClass]="auth? 'login-btn': 'registr-btn'" >
