--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
@@ -20,7 +20,7 @@
   justify-content: center;
 
   h2 {
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
@@ -33,7 +33,7 @@
 form {
   display: flex;
   flex-direction: row;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
   align-items: center;
 
   ::ng-deep {
@@ -106,7 +106,7 @@ form {
         li {
           list-style: none;
           margin: 8px 0 0;
-          font-family: "Source Sans Pro";
+          font-family: "Source Sans Pro", sans-serif;
           font-style: normal;
           font-weight: 600;
           font-size: 13px;
@@ -170,7 +170,7 @@ form {
     label {
       line-height: 64px;
       padding: 0 14px;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       color: #99acb7;
       font-size: 17.5px;
       font-weight: 400;
@@ -215,7 +215,7 @@ form {
       label {
         line-height: 44px;
         padding: 0 14px;
-        font-family: "Source Sans Pro";
+        font-family: "Source Sans Pro", sans-serif;
         color: #99acb7;
         font-size: 17.5px;
         font-weight: 400;
