--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
@@ -39,5 +39,12 @@
       </div>
     </div>
   </div>
-  <div class="step-detail"></div>
+  <div class="step-detail">
+    <app-first-step-service-creation></app-first-step-service-creation>
+    <!-- <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div> -->
+  </div>
 </div>
