--- a/src/app/authorization-page/authentification-page/login-page/login-page.component.scss
+++ b/src/app/authorization-page/authentification-page/login-page/login-page.component.scss
@@ -5,7 +5,7 @@ h2 {
   color: #000000;
   font-size: 36px;
   font-weight: 900;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
   text-align: center;
 }
 
@@ -14,7 +14,7 @@ p {
   font-size: 21px;
   font-weight: 300;
   text-align: center;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .form-control:focus {
@@ -48,7 +48,7 @@ input {
   background-color: #f5f6fa;
   border: none;
   outline: none;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
   // padding: 0 30px 0 10px;
 
   &::-webkit-input-placeholder {
@@ -95,16 +95,16 @@ input {
   margin: 14px 0 40px;
   display: flex;
   justify-content: space-between;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
   .remember-me {
     color: #707683;
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
   }
   a {
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -121,7 +121,7 @@ input {
 
 .submit {
   text-align: center;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
   button{
   padding: 13px 73px;
   color: #ffffff;
@@ -130,7 +130,6 @@ input {
   background: #3C7EEA;
   box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
   border-radius: 8px;
-  font-family: "Source Sans Pro";
   }
 
 }
