--- a/src/app/authorization-page/set-new-pass/set-new-pass.component.scss
+++ b/src/app/authorization-page/set-new-pass/set-new-pass.component.scss
@@ -87,7 +87,7 @@
         li {
           list-style: none;
           margin: 8px 0 0 15px;
-          font-family: "Source Sans Pro";
+          font-family: "Source Sans Pro", sans-serif;
           font-style: normal;
           font-weight: 600;
           font-size: 13px;
@@ -150,7 +150,7 @@
      label {
       line-height: 40px;
       padding: 0 14px;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       color: #99acb7;
       font-size: 17.5px;
       font-weight: 400;
@@ -159,7 +159,7 @@
     input {
       padding: 0 14px;
       box-sizing: border-box;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       color: #707683;
     }
 
