--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -1,5 +1,7 @@
 .wrapper {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
@@ -15,7 +17,7 @@
     height: 6.5%;
     align-items: center;
     .logo {
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-weight: 800;
       font-size: 24px;
       line-height: 24px;
@@ -55,7 +57,7 @@
   position: relative;
   label {
     cursor: pointer;
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -146,7 +148,7 @@
       border: none;
       background: none;
       margin-left: 80px;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-style: normal;
       font-weight: 600;
       font-size: 16px;
@@ -188,7 +190,7 @@
     }
   }
   .name {
-    font-family: Source Sans Pro;
+    font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 17px;
@@ -196,13 +198,14 @@
     color: #ffffff;
     margin: 0;
   }
-  .menu {
-    // height: 100%;
-  }
+  // .menu {
+  //   // height: 100%;
+  // }
 }
 .content-part {
   width: 77%;
   height: 93.4%;
+  overflow-y: auto;
   background: #fbfcfd;
   box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
   border-radius: 4px;
