--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/my-services-home/my-services-home.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/my-services-home/my-services-home.component.scss
@@ -1,5 +1,5 @@
 h3 {
-  font-family: Source Sans Pro;
+  font-family: "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
