--- a/src/app/shared/modules/categories-header/categories-header.component.scss
+++ b/src/app/shared/modules/categories-header/categories-header.component.scss
@@ -1,29 +1,127 @@
-.categorys-list{
+.categorys-list {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  background: #649AF3;
-  padding: 20px 0;
+  background: #649af3;
+  padding: 0;
   list-style-type: none;
 }
-.categorie{
+.categorie {
   margin: 0;
   padding: 0;
-  &-name{
+  position: relative;
+  padding: 20px 0;
+  overflow: hidden;
+  transition: overflow 0.5s;
+  &-name {
     font-family: "Source Sans Pro";
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
-    color: #FFFFFF;
+    color: #ffffff;
+    margin: 0;
+  }
+  &:hover {
+    overflow: visible;
+    // z-index: 9;
+    .subcategorys-list {
+      transition: all 0.5s;
+      opacity: 1;
+      top: 100%;
+      left: -50%;
+    }
+  }
+  &:nth-child(1) {
+    .subcategorys-list {
+      min-width: 960px;
+    }
+  }
+  &:nth-child(2) {
+    .subcategorys-list {
+      min-width: 710px;
+    }
+  }
+  &:nth-child(3) {
+    .subcategorys-list {
+      min-width: 230px;
+      .subcategory-group{
+        padding-right: 0;
+      }
+    }
+  }
+  &:nth-child(4) {
+    .subcategorys-list {
+      min-width: 310px;
+      .subcategory-group{
+        padding-right: 0;
+      }
+    }
+  }
+  &:nth-child(5) {
+    .subcategorys-list {
+      min-width: 980px;
+      left: -800px;
+      .subcategory-group:last-child{
+        padding-right: 0;
+      }
+    }
   }
 }
 
-.subcategory-group{
-  &__name{
+.subcategorys-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: auto;
+  align-items: flex-start;
+  position: absolute;
+  // top: 900em;
+  top: 100%;
+  opacity: 0;
+  // z-index: -1;
+  transition: all 0.5s;
+
+
+  background: #ffffff;
+  border: 1px solid rgba(220, 224, 230, 0.1);
+  box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
+  border-radius: 3px;
+  padding: 20px 18px 0;
+
+}
+
+.subcategory-group {
+  min-width: auto;
+  padding-bottom: 35px;
+  padding-left: 0;
+  padding-right: 70px;
+  list-style-type: none;
+  &__name {
     font-family: "Source Sans Pro";
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
-    color: #323C47;
+    color: #323c47;
+    margin: 0 0 12px;
+  }
+  & > div {
+    margin-bottom: 12px;
+    &:last-child {
+      .subcategorie {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.subcategorie {
+  font-family: "Source Sans Pro";
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #707683;
+
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
   }
 }
