--- a/src/app/shared/modules/categories-header/categories-header.component.scss
+++ b/src/app/shared/modules/categories-header/categories-header.component.scss
@@ -1,6 +1,10 @@
-.categorys-list {
+.wrapper{
+  max-width: 1549px;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+.categorys-list {
   width: 100%;
   background: #649af3;
   padding: 0;
@@ -10,7 +14,7 @@
   margin: 0;
   padding: 0;
   position: relative;
-  padding: 20px 0;
+  padding: 20px 15px;
   overflow: hidden;
   transition: overflow 0.5s;
   &-name {
